<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oicc"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/vlinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/playerNameTextField"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/playerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/playerNameEditText"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/vLinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/startBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_vertical"
                android:text="@string/startBtn" />

            <Button
                android:id="@+id/dashBoardBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dashBoardBtn" />

            <Button
                android:id="@+id/exitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exitBtn" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>